[package]
name = "pomodoro_timer_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
crossterm = "0.28.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.102"
chrono = "0.4.26"
rodio = "0.17.0"