[package]
name = "pomodoro_timer_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tui = "0.19.0"
crossterm = "0.28.1"
clap = { version = "4.1.2", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rodio = "0.17.0"
chrono = "0.4.38"